Bug 330465 - Finished Transfers are Stopped/Started when Internet Connection is Lost/Regained resp.
Summary: Finished Transfers are Stopped/Started when Internet Connection is Lost/Regai...
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-27 13:19 UTC by David E. Narvaez
Modified: 2014-01-27 18:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David E. Narvaez 2014-01-27 13:19:11 UTC
After a transfer is finished, and connection is lost (e.g., by closing the laptop lid) and later regained (by opening the laptop lid), the transfer is stopped and restarted.

Reproducible: Always

Steps to Reproduce:
1. Download a file and wait until it is finished
2. Disconnect from the internet
3. Reconnect
Actual Results:  
Transfer is stopped in step 2 and restarted in step 3

Expected Results:  
Transfer should stay finished
Comment 1 David E. Narvaez 2014-01-27 18:49:49 UTC
Git commit 3dcc79b108d13f00764907f881bf7435d18d10e7 by David E. Narvaez.
Committed on 27/01/2014 at 18:44.
Pushed by narvaez into branch 'master'.

0;115;0cMake Sure all Transfer Plugins Check for Finished Status Before Stopping

The check is correct in TransferKio, but was missing in many other
transfer plugins. I factored the stop method of the Metalink transfers
into the abstract base class to avoid code duplication.
REVIEW: 115329
FIXED-IN: 4.12.2

M  +1    -1    tests/schedulertest.cpp
M  +13   -0    transfer-plugins/metalink/abstractmetalink.cpp
M  +1    -1    transfer-plugins/metalink/abstractmetalink.h
M  +0    -11   transfer-plugins/metalink/metalinkhttp.cpp
M  +0    -1    transfer-plugins/metalink/metalinkhttp.h
M  +0    -13   transfer-plugins/metalink/metalinkxml.cpp
M  +0    -1    transfer-plugins/metalink/metalinkxml.h
M  +2    -1    transfer-plugins/multisegmentkio/transfermultisegkio.cpp

http://commits.kde.org/kget/3dcc79b108d13f00764907f881bf7435d18d10e7