0;115;0cMake Sure all Transfer Plugins Check for Finished Status Before Stopping

The check is correct in TransferKio, but was missing in many other
transfer plugins. I factored the stop method of the Metalink transfers
into the abstract base class to avoid code duplication.

BUG: 330465
REVIEW: 115329
FIXED-IN: 4.12.2