transfer-plugins/multisegmentkio/transfermultisegkio.cpp
@@ -94,8 +94,9 @@ void TransferMultiSegKio::stop()
 {
     kDebug(5001);
 
-    if(status() == Stopped)
+    if ((status() == Stopped) || (status() == Finished)) {
         return;
+    }
 
     if (m_dataSourceFactory)
     {
